--- a/Explo/ep_weather_host/ep_weather_host.vcxproj
+++ b/Explo/ep_weather_host/ep_weather_host.vcxproj
@@ -141,7 +141,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\build\$(Configuration)\$(Platform)\</OutDir>
+    <OutDir>..\..\..\..\l222ock\StartX\bin\weather\com</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <LinkIncremental>true</LinkIncremental>
